--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,7 +12,9 @@
 }
 
 .custom-navbar a {
-  color: white;
   text-decoration: none;
   margin: 0 32px;
+  background-image: linear-gradient(135deg, rgba(117, 65, 255, 0.8), rgba(163, 1, 252, 0.8));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
