--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100vw;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: #1F1F1F;
   display: flex;
   justify-content: center;
   align-items: center;
