card half out of body scrolling fix

--- a/app/assets/stylesheets/pages/_artists.scss
+++ b/app/assets/stylesheets/pages/_artists.scss
@@ -32,6 +32,12 @@
   padding: 0;
 }
 
+.artists-card-body {
+  padding: 0 !important;
+  text-decoration: none;
+  max-height: 170px;
+  position: relative;
+}
 .card-body {
   padding: 0 !important;
   text-decoration: none;
