basic error pages created

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,8 @@
 <div class="home">
   <div class="home-centered">
     <div class="home-container">
-      <h1>Find Your Gig Buddy Today</h1>
+      <h1>Find Your GigBuddy Today</h1>
+      <p>Creating Connections Through Live Music</p>
       <% if current_user %>
         <%= link_to "Get Started", swiper_index_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
       <% else %>
