--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -53,6 +53,10 @@
   align-items: center;
   margin-top: 16px;
   margin-left: 16px;
+  a {
+    text-decoration: none;
+    color: white;
+  }
 
 }
 
@@ -69,7 +73,9 @@
 h1 {
   margin: 0;
   margin-left: 128px;
+  text-decoration: none;
 }
+
 
 .delete-match {
   position: absolute;
@@ -78,6 +84,9 @@ h1 {
   text-decoration: none;
   color: white;
   font-size: 24px;
+  background-image: linear-gradient(135deg, rgba(117, 65, 255, 0.8), rgba(163, 1, 252, 0.8));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .gradient-button {
