makes alerts a bit nicer

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,10 @@
 .alert {
   position: fixed;
-  bottom: 16px;
+  top: 16px;
   right: 16px;
   z-index: 1000;
+  background: linear-gradient(135deg, #7541FF, #A301FC);
+  color: white;
+  border: none;
+  border-radius: 12px;
 }
