--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -5,6 +5,12 @@
       <i class="fa-solid fa-chevron-left"></i>
     <% end %>
   </div>
+  <%# <div class="profile-picture">
+    <% @match.profile.photos.each do |photo| %>
+      <%# <%= cl_image_tag photo.key, height: 100, width: 100, crop: :fill %>
+    <%# <% end %>
+  </div>
+
   <h1><%= link_to @match_profile.name.capitalize, profile_path(@match_profile) %></h1>
 
   <div class="delete-match">
