--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -57,7 +57,10 @@
     text-decoration: none;
     color: white;
   }
-
+  .chatroom-profile-picture{
+    border-radius: 50px;
+    margin-right: 12px;
+  }
 }
 
 .back {
