--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -83,3 +83,8 @@
   justify-content: center;
   margin-top: 16px;
 }
+.landingpage-button-container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 8px;
+}
