--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,12 +1,12 @@
-<div class="header-container">
+
 <div class="header">
   <div class="back">
     <%= link_to matches_path do %>
       <i class="fa-solid fa-chevron-left"></i>
     <% end %>
   </div>
-  <div class="profile-picture">
-    <%= cl_image_tag @their_profile.photos.first.key, height: 100, width: 100, crop: :fill %>
+  <div class="chatroom-profile-picture">
+    <%= cl_image_tag @their_profile.photos.first.key, height: 50, width: 50, crop: :fill %>
   </div>
 
   <h1><%= link_to @match_profile.name.capitalize, profile_path(@match_profile) %></h1>
@@ -15,8 +15,8 @@
     <%= link_to delete_match_path, data: { turbo_method: :delete, turbo_confirm: "Sure you want to delete this match?" } do %>
       <i class="fa-solid fa-user-slash"></i>
     <% end %>
-    </div>
   </div>
+
 </div>
 
 
