--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,11 +11,13 @@
     </div>
 
     <div class="home-sign-in-text">
-          <% if current_user %>
-        <%= link_to "Get Started", swiper_index_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
-      <% else %>
-        <%= link_to "Get Started", new_user_registration_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
-      <% end %>
+      <div class="landingpage-button-container">
+            <% if current_user %>
+          <%= link_to "Get Started", swiper_index_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
+        <% else %>
+          <%= link_to "Get Started", new_user_registration_path, class: "home-btn home-btn-primary home-btn-get-started d-block", id: "home-getstartedbtn" %>
+        <% end %>
+      </div>
       <p>Already have an account? <strong><%= link_to "Sign in", new_user_session_path %></strong></p>
     </div>
   </div>
