--- a/app/views/matches/_match_card.html.erb
+++ b/app/views/matches/_match_card.html.erb
@@ -1,5 +1,8 @@
 <div class="its-a-match">
-  <h1>It's a match!</h1>
-  <%= cl_image_tag profile.photos.first.key, heigth: "100", width: "100" %>
-  <%= cl_image_tag match_profile.photos.first.key, heigth: "100", width: "100"  %>
+  <h1 style="text-align: center;">It's a match!</h1>
+  <div style="display: flex; justify-content: center; align-items: center;">
+    <%= cl_image_tag profile.photos.first.key, heigth: "100", width: "100", style: "margin-right: 20px;" %>
+    <i class="fas fa-music" style="font-size: 50px; margin-right: 20px;"></i>
+    <%= cl_image_tag match_profile.photos.first.key, heigth: "100", width: "100", style: "margin-left: 20px;" %>
+  </div>
 </div>
