--- a/app/assets/stylesheets/components/_swiper.scss
+++ b/app/assets/stylesheets/components/_swiper.scss
@@ -13,6 +13,7 @@
   margin-left: 45px;
   margin-top: 100px;
   color: white;
+  overflow: scroll;
 }
 .profile-photo {
   width: 100px;
@@ -41,7 +42,12 @@
 .pronouns {
   opacity: 0.75;
   font-size: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
+}
+
+.swiper-card-bio {
+  font-size: 12px;
+  opacity: 75%;
 }
 
 .profile-details p {
@@ -58,6 +64,11 @@
 
 .location {
   margin-left: 16px;
+}
+
+.swiper-card-artist-name {
+  font-size: 14px;
+  margin-right: 24px;
 }
 
 .swiper-container {
@@ -80,7 +91,7 @@
     cursor: pointer;
     /* Apply gradient border */
     border-image: linear-gradient(to right, #7541FF, #A301FC) 1;
-}
+  }
 
   .circle-button i {
     font-size: 30px;
